syntax = "proto3";

package clob;

import "validate/validate.proto";

service Clob {
  rpc PlaceOrder (OrderRequestClob) returns (OrderResponse);
  rpc GetBook (BookRequest) returns (BookSnapshot);
  rpc StreamBook (BookRequest) returns (stream BookSnapshot);
  rpc AddMarket (MarketIdRequest) returns (MarketIdResponse);
}

message OrderRequestClob {
  string tx_id = 1 [json_name = "txId", (validate.rules).string = {pattern: "(?i)^[0-9a-f]{8}-[0-9a-f]{4}-7[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"} /* Strict RFC-9562-compliant UUIDv7 */];
  string net = 2 [json_name = "net"];
  string market_id = 3 [json_name = "marketId"];
  string account_id = 4 [json_name = "accountId"];
  string market_limit = 5 [json_name = "marketLimit"];
  double price_usd = 6 [json_name = "priceUsd"];
  double qty = 7 [json_name = "qty"];
  double qty_orig = 8 [json_name = "qtyOrig"]; // need to keep track of the original qty for signature validation
  string sig = 9 [json_name = "sig"];
  // passing extra key info - i) avoid lookups ii) handle situation where user has changed their key
  string public_key = 10 [json_name = "publicKey"];
  string evm_address = 11 [json_name = "evmAddress"];
  int32 key_type = 12 [json_name = "keyType"];
}

message OrderResponse {
  string status = 1;
  string error = 2;
}

message BookRequest {
  string market_id = 1;
  uint32 depth = 2;
}

message OrderDetail {
  string tx_id = 1;
  string account_id = 2;
  double price_usd = 3;
  double qty = 4;
}

message BookSnapshot {
  repeated OrderDetail bids = 1;
  repeated OrderDetail asks = 2;
}


message MarketIdRequest {
  string market_id = 1;
}
message MarketIdResponse {
  string market_id = 1;
}
